--- a/openai_chat_udf/Makefile
+++ b/openai_chat_udf/Makefile
@@ -19,10 +19,7 @@ docker: Dockerfile
 	docker build --build-arg VERSION="$(VERSION)" -t $(IMAGE_NAME) .
 
 docker_run: 
-	docker run -p 5001:5001 -e TIMEPLUS_API_KEY=${TIMEPLUS_API_KEY} -e TIMEPLUS_ADDRESS=${TIMEPLUS_ADDRESS} -e OPENAI_API_KEY=${OPENAI_API_KEY}  $(IMAGE_NAME)
-
-docker_run_app: 
-	docker run -p 5001:5001 --entrypoint streamlit $(IMAGE_NAME) run app/chat.py
+	docker run -p 5001:5001 -e OPENAI_API_KEY=${OPENAI_API_KEY}  $(IMAGE_NAME)
 
 push:
 	docker tag $(IMAGE_NAME) $(FULLNAME)
