--- a/fraud-detection/docker/docker-compose.yaml
+++ b/fraud-detection/docker/docker-compose.yaml
@@ -26,6 +26,18 @@ services:
     environment:
     - TIMEPLUS_HOST=timeplus
 
+  notebook:
+    image: timeplus-ibis:dev
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./notebooks:/home/jovyan/work
+    entrypoint: /bin/bash
+    command: -c "jupyter notebook \
+                 --notebook-dir=/home/jovyan/work --ip='*' --port=8888 \
+                 --NotebookApp.token='' \
+                 --no-browser --allow-root"
+
 volumes:
   timeplus_data:
     driver: local
