update grafana example with awesome sensor logger
using 2.0.0 grafana plugin
update dashboard.json, because queryText->sql
create Timeplus user admin/password, set password in secureJsonData

--- a/awesome-sensor-logger/docker-compose.yml
+++ b/awesome-sensor-logger/docker-compose.yml
@@ -1,12 +1,26 @@
 services:
   timeplus:
-    image: docker.timeplus.com/timeplus/timeplus-enterprise:latest
+    image: docker.timeplus.com/timeplus/timeplus-enterprise:2.5.9
     pull_policy: always
     ports:
-      - 3218:3218 #http port for JDBC driver, default streaming mode
-      - 8123:8123 #http port for JDBC driver, default batch mode
+      - 3218:3218 #http port, default streaming mode
+      - 8123:8123 #http port, default batch mode
       - 8463:8463 #tcp port for go driver or grafana plugin
       - 8000:8000 #UI and REST port
+    healthcheck:
+      test: ["CMD", "curl", "http://localhost:8123"]
+      interval: 2s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+  init_timeplus:
+    image: curlimages/curl
+    command: >
+      sh -c "echo 'enable trial ' && curl -X POST timeplus:8000/default/api/v1beta2/licenses/trial -d '{\"userEmail\": \"a@test.com\", \"userName\": \"admin\", \"password\": \"password\", \"allowTrack\": false }' && sleep 3 && echo ' create a stream ' && echo 'CREATE STREAM phone(raw string)' | curl 'timeplus:8123/?user=admin&password=password' --data-binary @-"
+    depends_on:
+      timeplus:
+        condition: service_healthy
 
   grafana:
     image: grafana/grafana:latest
@@ -16,7 +30,7 @@ services:
     environment:
       GF_AUTH_ANONYMOUS_ENABLED: 1
       GF_AUTH_ANONYMOUS_ORG_ROLE: Admin
-      GF_INSTALL_PLUGINS: timeplus-proton-datasource
+      GF_INSTALL_PLUGINS: https://d.timeplus.com/grafana/timeplus-proton-datasource-2.0.0.zip;timeplus-proton-datasource
       GF_LOG_LEVEL: error
     volumes:
       - ./grafana_provisioning:/etc/grafana/provisioning
