--- a/rag_question_and_answer_system/requirements.txt
+++ b/rag_question_and_answer_system/requirements.txt
@@ -2,8 +2,7 @@ fastapi==0.75.0
 loguru==0.6.0
 uvicorn[standard]==0.17.6
 requests==2.28.2
-openai==1.51.0
 click==8.1.3
 proton_driver==0.2.10
 numpy
-
+openai
