--- a/rag_question_and_answer_system/docker-compose.yaml
+++ b/rag_question_and_answer_system/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     volumes:
       - timeplus_data:/timeplus/data/
   
-  embedding:
+  udf:
     image: timeplus/ragdemo:latest
     ports:
       - "5001:5001"
