--- a/openai_chat_udf/docker-compose.yaml
+++ b/openai_chat_udf/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   timeplus:
-    image: timeplus/timeplus-enterprise:2.4.10
+    image: timeplus/timeplus-enterprise:2.5.11
     environment:
     - ENABLE_AUTHENTICATION=true
     - TIMEPLUSD_ADMIN_PASSWORD=Password!
@@ -27,9 +27,9 @@ services:
       start_period: 10s
 
   init_udf:
-    image: timeplus/timeplus-enterprise:2.4.10
+    image: timeplus/timeplus-enterprise:2.5.11
     entrypoint: >
-      /bin/bash -c "timeplusd client -h timeplus --queries-file=/udf.sql"
+      /bin/bash -c "timeplusd client -h timeplus --user proton --password Password! --queries-file=/udf.sql"
     volumes:
       - ./script/udf.sql:/udf.sql
     depends_on:
