--- a/bluesky_stream_analysis/Makefile
+++ b/bluesky_stream_analysis/Makefile
@@ -14,7 +14,7 @@ test_user:
 
 
 test_post:
-	curl -X POST http://localhost:5001/post -H 'Content-Type: application/json' -d '{"cid":["bafyreiax3qmdxlcp2k33k522uecf5qunuj4vok5b2tsczpa4fspe6p5y7u"], "url":["at://did:plc:6igmqrjdv7lvsgmp5h7wikvl/app.bsky.feed.post/3le2lxv4pes23"]}'
+	curl -X POST http://localhost:5001/post -H 'Content-Type: application/json' -d '{"cid":["bafyreiax3qmdxlcp2k33k522uecf5qunuj4vok5b2tsczpa4fspe6p5y7u"], "uri":["at://did:plc:6igmqrjdv7lvsgmp5h7wikvl/app.bsky.feed.post/3le2lxv4pes23"]}'
 
 
 docker: Dockerfile
