update stats model for time series

--- a/python-udf/Makefile
+++ b/python-udf/Makefile
@@ -11,8 +11,16 @@ init:
 install_deps:
 	curl -X POST http://localhost:8123/timeplusd/v1/python_packages \
 		-u proton:timeplus@t+ \
-		-d '{"packages": [{"name": "pandas"},{"name": "numpy"},{"name": "scikit-learn"},{"name": "torch"},{"name": "transformers"},{"name": "openai"}]}'
+		-d '{"packages": [{"name": "pandas"},{"name": "numpy"},{"name": "scikit-learn"},{"name": "torch"},{"name": "transformers"},{"name": "openai"},{"name": "statsmodels"}]}'
 
 list_deps:
 	curl http://localhost:8123/timeplusd/v1/python_packages \
 		-u proton:timeplus@t+ 
+
+uninstall_deps:
+	curl -X DELETE http://localhost:8123/timeplusd/v1/python_packages/prophet \
+		-u proton:timeplus@t+
+	curl -X DELETE http://localhost:8123/timeplusd/v1/python_packages/darts \
+		-u proton:timeplus@t+
+	curl -X DELETE http://localhost:8123/timeplusd/v1/python_packages/jsondiff \
+		-u proton:timeplus@t+
